--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\gagan\AppData\Local\Temp\testng-eclipse--630103597\testng-customsuite.xml</span>
+                    <span>C:\Users\reshm\AppData\Local\Temp\testng-eclipse--1274349138\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -316,7 +316,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\gagan\AppData\Local\Temp\testng-eclipse--630103597\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\reshm\AppData\Local\Temp\testng-eclipse--1274349138\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -367,74 +367,74 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(16);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'openwebsite')
+data.setCell(0, 1, 'Login')
 data.setCell(0, 2, 'module1.Array')
-data.setCell(0, 3, 3144);
+data.setCell(0, 3, 1060);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Login')
+data.setCell(1, 1, 'TryHereLinkArrayInPython')
 data.setCell(1, 2, 'module1.Array')
-data.setCell(1, 3, 3109);
+data.setCell(1, 3, 831);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TryHereLinkArrayInPython')
+data.setCell(2, 1, 'openwebsite')
 data.setCell(2, 2, 'module1.Array')
-data.setCell(2, 3, 2254);
+data.setCell(2, 3, 621);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'ArrayPage')
 data.setCell(3, 2, 'module1.Array')
-data.setCell(3, 3, 2105);
+data.setCell(3, 3, 518);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'SquaresOfSortedArray')
+data.setCell(4, 1, 'clickGetStarted')
 data.setCell(4, 2, 'module1.Array')
-data.setCell(4, 3, 1371);
+data.setCell(4, 3, 447);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'BasicOperationListClick')
+data.setCell(5, 1, 'MaxConsecutiveOnes')
 data.setCell(5, 2, 'module1.Array')
-data.setCell(5, 3, 1107);
+data.setCell(5, 3, 444);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'TryHereApplicationOfArray')
+data.setCell(6, 1, 'FindNumberWithEvenNumber')
 data.setCell(6, 2, 'module1.Array')
-data.setCell(6, 3, 1060);
+data.setCell(6, 3, 423);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'SearchTheArray')
+data.setCell(7, 1, 'ApplicationOfArrayClick')
 data.setCell(7, 2, 'module1.Array')
-data.setCell(7, 3, 960);
+data.setCell(7, 3, 422);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'ApplicationOfArrayClick')
+data.setCell(8, 1, 'TryHereBasicOperationList')
 data.setCell(8, 2, 'module1.Array')
-data.setCell(8, 3, 817);
+data.setCell(8, 3, 421);
 data.setCell(9, 0, 9)
-data.setCell(9, 1, 'clickGetStarted')
+data.setCell(9, 1, 'TryHereArraysUsingList')
 data.setCell(9, 2, 'module1.Array')
-data.setCell(9, 3, 794);
+data.setCell(9, 3, 421);
 data.setCell(10, 0, 10)
-data.setCell(10, 1, 'FindNumberWithEvenNumber')
+data.setCell(10, 1, 'SquaresOfSortedArray')
 data.setCell(10, 2, 'module1.Array')
-data.setCell(10, 3, 791);
+data.setCell(10, 3, 414);
 data.setCell(11, 0, 11)
-data.setCell(11, 1, 'ArraysUsingListClick')
+data.setCell(11, 1, 'TryHereApplicationOfArray')
 data.setCell(11, 2, 'module1.Array')
-data.setCell(11, 3, 777);
+data.setCell(11, 3, 414);
 data.setCell(12, 0, 12)
-data.setCell(12, 1, 'TryHereBasicOperationList')
+data.setCell(12, 1, 'SearchTheArray')
 data.setCell(12, 2, 'module1.Array')
-data.setCell(12, 3, 752);
+data.setCell(12, 3, 412);
 data.setCell(13, 0, 13)
-data.setCell(13, 1, 'clickdrpdownArray')
+data.setCell(13, 1, 'BasicOperationListClick')
 data.setCell(13, 2, 'module1.Array')
-data.setCell(13, 3, 720);
+data.setCell(13, 3, 395);
 data.setCell(14, 0, 14)
-data.setCell(14, 1, 'TryHereArraysUsingList')
+data.setCell(14, 1, 'clickdrpdownArray')
 data.setCell(14, 2, 'module1.Array')
-data.setCell(14, 3, 716);
+data.setCell(14, 3, 379);
 data.setCell(15, 0, 15)
-data.setCell(15, 1, 'MaxConsecutiveOnes')
+data.setCell(15, 1, 'ArraysUsingListClick')
 data.setCell(15, 2, 'module1.Array')
-data.setCell(15, 3, 687);
+data.setCell(15, 3, 370);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 21 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -467,63 +467,63 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Login</span>
-                <span class="method-start">3160 ms</span>
+                <span class="method-start">626 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">clickGetStarted</span>
-                <span class="method-start">6273 ms</span>
+                <span class="method-start">1688 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">clickdrpdownArray</span>
-                <span class="method-start">7071 ms</span>
+                <span class="method-start">2136 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ArrayPage</span>
-                <span class="method-start">7799 ms</span>
+                <span class="method-start">2517 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TryHereLinkArrayInPython</span>
-                <span class="method-start">9907 ms</span>
+                <span class="method-start">3037 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ArraysUsingListClick</span>
-                <span class="method-start">12165 ms</span>
+                <span class="method-start">3870 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TryHereArraysUsingList</span>
-                <span class="method-start">12949 ms</span>
+                <span class="method-start">4243 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">BasicOperationListClick</span>
-                <span class="method-start">13670 ms</span>
+                <span class="method-start">4666 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TryHereBasicOperationList</span>
-                <span class="method-start">14792 ms</span>
+                <span class="method-start">5064 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ApplicationOfArrayClick</span>
-                <span class="method-start">15552 ms</span>
+                <span class="method-start">5490 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TryHereApplicationOfArray</span>
-                <span class="method-start">16373 ms</span>
+                <span class="method-start">5915 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">SearchTheArray</span>
-                <span class="method-start">17451 ms</span>
+                <span class="method-start">6332 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">MaxConsecutiveOnes</span>
-                <span class="method-start">18421 ms</span>
+                <span class="method-start">6747 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">FindNumberWithEvenNumber</span>
-                <span class="method-start">19109 ms</span>
+                <span class="method-start">7193 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">SquaresOfSortedArray</span>
-                <span class="method-start">19908 ms</span>
+                <span class="method-start">7619 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
